[gd_scene load_steps=15 format=3 uid="uid://dguswqwhw6id"]

[ext_resource type="Script" uid="uid://bdotlfxvb7j6r" path="res://enemies/enemy_composed.gd" id="1_fddph"]
[ext_resource type="Texture2D" uid="uid://c1h3tk203clg7" path="res://enemies/silk_spitter/silk_spitter_anims.png" id="2_orfgt"]
[ext_resource type="PackedScene" uid="uid://3kbd5phsf4bg" path="res://components/health_component/health_component.tscn" id="2_wwkio"]
[ext_resource type="PackedScene" uid="uid://wvdajc3q2v8g" path="res://components/hurtbox_component/hurtbox_component.tscn" id="3_5vcs3"]
[ext_resource type="Texture2D" uid="uid://dkia4dc3mre8s" path="res://enemies/silk_spitter/silk_spitter_anims_eyes.png" id="3_qeufh"]
[ext_resource type="Script" uid="uid://btt3wf72o4sst" path="res://enemies/common/copy_frame_sprite.gd" id="4_trkum"]
[ext_resource type="PackedScene" uid="uid://bd1lvgtnjvu3d" path="res://components/hitbox_component/hitbox_component.tscn" id="4_x6qby"]
[ext_resource type="AnimationLibrary" uid="uid://dxw6d6vomro1c" path="res://enemies/enemy_animations.res" id="5_023h3"]
[ext_resource type="PackedScene" uid="uid://c8w0i4ah3vv4s" path="res://components/popup_emitter_component/popup_emitter_component.tscn" id="5_xpqvo"]
[ext_resource type="PackedScene" uid="uid://ci1innvjpbdpd" path="res://components/pathfinding_component/pathfinding_component.tscn" id="6_orfgt"]
[ext_resource type="PackedScene" uid="uid://c5s1m8423l0mf" path="res://components/grid_movement_component/grid_movement_component.tscn" id="7_qeufh"]
[ext_resource type="PackedScene" uid="uid://72exs0gvf0fp" path="res://components/grid_range_component/grid_range_component.tscn" id="8_trkum"]
[ext_resource type="PackedScene" uid="uid://cm4ndh5xmoip5" path="res://components/targeting_component/targeting_component.tscn" id="9_023h3"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mkqlk"]
light_mode = 1

[node name="SilkSpitterComposed" type="Node2D"]
script = ExtResource("1_fddph")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_orfgt")
hframes = 8
vframes = 3

[node name="Eyes" type="Sprite2D" parent="." node_paths=PackedStringArray("copy_from")]
material = SubResource("CanvasItemMaterial_mkqlk")
texture = ExtResource("3_qeufh")
hframes = 8
vframes = 3
script = ExtResource("4_trkum")
copy_from = NodePath("../Sprite2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("5_023h3")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_wwkio")]
max_health = 15.0

[node name="HurtboxComponent" parent="." instance=ExtResource("3_5vcs3")]
collision_layer = 2
collision_mask = 5

[node name="HitboxComponent" parent="." instance=ExtResource("4_x6qby")]
collision_layer = 2
collision_mask = 5
damage = 2.0

[node name="PopupEmitterComponent" parent="." instance=ExtResource("5_xpqvo")]

[node name="PathfindingComponent" parent="." instance=ExtResource("6_orfgt")]
obstructive_tiles = Array[int]([3])

[node name="GridMovementComponent" parent="." instance=ExtResource("7_qeufh")]
movement_duration = 0.5
bounce_amount = 8.0

[node name="GridRangeComponent" parent="." instance=ExtResource("8_trkum")]
range = 1

[node name="TargetingComponent" parent="." instance=ExtResource("9_023h3")]

[node name="ActionTimer" type="Timer" parent="."]
autostart = true

[editable path="HurtboxComponent"]
[editable path="HitboxComponent"]
